<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.sesma.generik.ui.login.LoginActivity"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_pass1_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email_hint"
            android:contentDescription="@string/email_hint"
            android:autofillHints="emailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_pass2_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pass_hint"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_pass1_layout"
        app:passwordToggleEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/pass_hint"
            android:contentDescription="@string/pass_hint"
            android:autofillHints="password"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_forgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pass_forgot"
        app:layout_constraintTop_toBottomOf="@+id/et_pass2_layout"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginTop="16dp"
        android:enabled="false"
        />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/primary_button_borderless"
        android:textColor="@android:color/white"
        />

    <android.support.constraint.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_left"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_begin="@dimen/left_guideline_pos"
        />

    <android.support.constraint.Guideline android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_right"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/right_guideline_pos"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <include layout="@layout/wait"/>

</android.support.constraint.ConstraintLayout>