<resources>
    <string name="refresh">Refresh</string>
    <string name="location_permission_request">This app needs access to location services</string>
    <string name="connection_error">Connection error</string>
    <string name="login_button">Log in</string>
    <string name="register">Register</string>
    <string name="terms">Terms and conditions</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="pass_forgot">Forgot password?</string>
    <string name="pass_empty">Password cannot be empty</string>
    <string name="email_format">Invalid email format</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_pass_change">Do you want to recover your password?</string>
    <string name="verification_code">Verification code</string>
    <string name="code_explain">An SMS with the verification code has been sent</string>
    <string name="send_new">Send new</string>
    <string name="recover_password">Recover password</string>
    <string name="pass_confirm_hint">Confirm password</string>
    <string name="new_pass_title">Enter a new password for this account</string>
    <string name="pass_not_match">Passwords don\'t match</string>
    <string name="register_button">Register</string>
    <string name="email_confirm_hint">Confirm email</string>
    <string name="name_hint">Full name</string>
    <string name="phone_hint">Telephone</string>
    <string name="email_match">Email address don\'t match</string>
    <string name="hi">Hi %1$s!</string>
    <string name="main_menu">Main menu</string>
    <string name="profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="legal">Terms and conditions</string>
    <string name="phone_empty">Phone number cannot be empty</string>
    <string name="user">user</string>

    <string name="connectivity_error">Connectrivity error. Try again later</string>
    <string name="server_error">Server error. Try again later</string>
    <string name="unknown_error">Unknown error. Try again later</string>
    <string name="pass_not_updated">Please create a password from login screen</string>
    <string name="login_error">Incorrect user or password</string>
    <string name="ok">OK</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="wait">Waiting for server response</string>
    <string name="back">back</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_email_notification">Notify events by email</string>
    <string name="pref_title_sms_notification">Notify events by sms</string>
    <string name="pref_title_require_login">Require pin when returning to app</string>
    <string name="pref_description_require_login">After some minutes the app will require pin to open.</string>
    <string name="pref_title_allow_fingerprint">Allow fingerprint instead pin</string>
    <string name="pref_title_insert_pin">Insert pin</string>
    <string name="pref_description_allow_fingerprint">Allow login with fingerprint if app has timed out</string>
    <string name="settings">Settings</string>
    <string name="update_button">Update</string>
    <string name="enter_pin">Enter 4 digits PIN</string>

    <plurals name="num_comments">
        <item quantity="other">%1$d comments</item>
        <item quantity="one">%1$d comment</item>
    </plurals>

    <string name="fingerprint_explain">Or use your fingerprint</string>

</resources>
